--- a/styles/main.css
+++ b/styles/main.css
@@ -52,13 +52,13 @@ body {
   font-size: 26px;
   padding: 2px 0 0 0;
 }
-.timeandplace {
+.dimensions {
   color: #AAA;
   font-size: 14px;
   width: 100%;
   margin: 0;
 }
-.location {
+.locations {
   float: right;
   width: 300px;
   text-align: right;
